# CAN_ESPIDF

./: .gitignore  README.md  TODO.md
CAN_Display/: CMakeLists.txt  LOG1.CSV  LOG38.CSV  README.md  TODO.md  partitions.csv  partitions_16mb.csv  platformio.ini  samplelog.csv  sdkconfig.defaults  sdkconfig.display_node  sdkconfig.waveshare_2_1
CAN_Display/boards/: crowpanel-esp32s3-n4r2.json  waveshare-esp32s3-touch-lcd-2-1.json
CAN_Display/components/: lv_conf.h
CAN_Display/components/boot_splash/: CMakeLists.txt  README.md  boot_splash.c  boot_splash.h
CAN_Display/components/comm_link/: CMakeLists.txt  README.md  comm_link.c  comm_link.h
CAN_Display/components/data_logger/: CMakeLists.txt  README.md  data_logger.c  data_logger.h
CAN_Display/components/devices/: CMakeLists.txt  README.md  device.h  dis06043h.h  dis07050.h  dis08070h.h  ws_touch_lcd_2_1.h
CAN_Display/components/display_driver/: CMakeLists.txt  README.md  display_driver.c  display_driver.h
CAN_Display/components/gauge_engine/: CMakeLists.txt  README.md  gauge_engine.c  gauge_engine.h
CAN_Display/components/i2c_bus/: CMakeLists.txt  README.md  i2c_bus.c  i2c_bus.h
CAN_Display/components/imu_display/: CMakeLists.txt  README.md  imu_display.c  imu_display.h
CAN_Display/components/pcf85063/: CMakeLists.txt  README.md  pcf85063.c  pcf85063.h
CAN_Display/components/pid_store/: CMakeLists.txt  pid_store.c  pid_store.h
CAN_Display/components/qmi8658/: CMakeLists.txt  README.md  qmi8658.c  qmi8658.h
CAN_Display/components/system/: README.md  system.c  system.h
CAN_Display/components/tca9554/: CMakeLists.txt  README.md  tca9554.c  tca9554.h
CAN_Display/components/touch_driver/: CMakeLists.txt  README.md  touch_driver.c  touch_driver.h
CAN_Display/components/ui/: CMakeLists.txt  README.md  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
CAN_Display/components/ui/components/: ui_comp_hook.c
CAN_Display/components/ui/screens/: ui_Screen1.c  ui_Screen1.h
CAN_Display/components/ui/squareline/: 4.3Gauge.sll  4.3Gauge.spj  4.3Gauge_events.py
CAN_Display/components/wifi_manager/: CMakeLists.txt  README.md  TODO.md  config_handler.c  http_server.c  log_handler.c  pid_handler.c  portal_handler.c  qr_screen.c  scan_handler.c  status_handler.c  time_handler.c  wifi_ap.c  wifi_internal.h  wifi_manager.c  wifi_manager.h
CAN_Display/main/: CMakeLists.txt  main.c
CAN_Display/src/: .gitkeep
CAN_Interface/: CMakeLists.txt  README.md  TODO.md  partitions.csv  platformio.ini  sdkconfig.can_interface  sdkconfig.defaults
CAN_Interface/boards/: esp32-s3-n16r8-devkitc.json
CAN_Interface/components/can_driver/: CMakeLists.txt  README.md  can_driver.c  can_driver.h  mcp2515.c  mcp2515.h  mcp2515_defs.h  mcp2518fd.c  mcp2518fd.h  mcp2518fd_defs.h
CAN_Interface/components/comm_link/: CMakeLists.txt  README.md  comm_link.c  comm_link.h
CAN_Interface/components/devices/: CMakeLists.txt  ESP32-S3-N16R8-DevKitC.h  README.md
CAN_Interface/components/diagnostics/: CMakeLists.txt  README.md  diagnostics.c  diagnostics.h
CAN_Interface/components/obd2/: CMakeLists.txt  README.md  obd2.c  obd2.h
CAN_Interface/components/pid_db/: CMakeLists.txt  README.md  pid_db.c  pid_db.h  pid_entry.h  pid_tables.c
CAN_Interface/components/poll_engine/: CMakeLists.txt  README.md  poll_engine.c  poll_engine.h
CAN_Interface/components/sys_mgr/: CMakeLists.txt  README.md  sys_mgr.c  (+1 more)
CAN_Interface/main/: CMakeLists.txt  main.c
Claude/: Claude_Instructions.md
Claude/.claude/: settings.local.json
shared/: CAN_ESPIDF.code-workspace  README.md
shared/comm_protocol/: CMakeLists.txt  README.md  comm_protocol.c  comm_protocol.h
shared/pid_types/: CMakeLists.txt  README.md  pid_types.c  pid_types.h
shared/utils/: CMakeLists.txt  README.md  utils.c  utils.h
(+9 files in other folders)
